deploy: bc78b1d12cfa9dcc643bf1f6cd5497efe6624548

--- a/index.html
+++ b/index.html
@@ -2190,7 +2190,6 @@ button:active {
   <script>
     const MAX_RECENT = 25;
 const offsets = {}; // offsets[category] = number of revealed rows - 1
-let gameViewActive = false; // Track if game viewer is open
 let currentViewMode = 'home'; // Track current view: 'home' or 'category'
 
 // Get all valid game folders
@@ -2269,8 +2268,8 @@ function updateCategoryView(cat) {
   const cards = Array.from(grid.querySelectorAll('.game-card'));
   const total = cards.length;
 
-  // If game viewer is active OR viewing specific category, show all cards
-  if (gameViewActive || currentViewMode === 'category') {
+  // If viewing specific category, show all cards
+  if (currentViewMode === 'category') {
     cards.forEach(c => c.style.display = '');
     return;
   }
@@ -2480,355 +2479,10 @@ function goToHome() {
   const searchBar = document.getElementById('searchBar');
   if (searchBar) searchBar.value = '';
   hideSearchDropdown();
-  closeGame();
   filterCategory('Home');
 }
 
-// Prepare game (open viewer overlay)
-let currentGameFolder = null;
-const viewer = document.getElementById('viewer');
-const frame = document.getElementById('gameFrame');
-const controls = document.getElementById('controls');
-const gameTitle = document.getElementById('gameTitle');
-const startOverlay = document.getElementById('startOverlay');
-const startThumb = document.getElementById('startThumb');
-const startName = document.getElementById('startName');
-
-function prepareGame(folderEncoded, nameEncoded, thumbSrc) {
-  const folder = decodeURIComponent(folderEncoded);
-  const name = decodeURIComponent(nameEncoded);
-
-  // Verify game exists before opening
-  if (!gameExists(folder)) {
-    alert('This game is no longer available.');
-    cleanRecentlyPlayed();
-    loadRecentlyPlayed();
-    return;
-  }
-
-  currentGameFolder = folder;
-  frame.src = '';
-  viewer.style.display = 'flex';
-  controls.classList.add('active');
-  gameTitle.textContent = name;
-  startThumb.src = thumbSrc || 'assets/logo.png';
-
-  // Add error handler for thumbnail
-  startThumb.onerror = () => {
-    startThumb.src = 'assets/logo.png';
-  };
-
-  startName.textContent = name;
-  startOverlay.style.opacity = '1';
-  startOverlay.style.pointerEvents = 'auto';
-  window.location.hash = '#/game/' + folderEncoded;
-  document.getElementById('content').scrollTop = 0;
-
-  // Set game view active
-  gameViewActive = true;
-
-  // CRITICAL: Force hide Recently Played section immediately
-  const recentlyPlayedSection = document.getElementById('recentlyPlayedSection');
-  if (recentlyPlayedSection) {
-    recentlyPlayedSection.style.display = 'none';
-    recentlyPlayedSection.style.visibility = 'hidden';
-  }
-
-  // Hide all other categories
-  document.querySelectorAll('.category').forEach(cat => {
-    if (cat.id !== 'curatedGamesSection' && cat.getAttribute('data-category') !== 'All Games') {
-      cat.style.display = 'none';
-    }
-  });
-
-  showCuratedGames(folder);
-
-  saveRecentlyPlayed({ folder, name, thumb: thumbSrc || 'assets/logo.png' });
-}
-
-// Show curated games when game viewer is open - ALWAYS 7 ROWS
-function showCuratedGames(currentGameFolder) {
-  console.log('=== Starting showCuratedGames for:', currentGameFolder);
-
-  // Hide search results if visible
-  const searchResults = document.getElementById('searchResultsSection');
-  if (searchResults) searchResults.style.display = 'none';
-
-  // ✅ CRITICAL: Force hide Recently Played with multiple methods
-  const recentSection = document.getElementById('recentlyPlayedSection');
-  if (recentSection) {
-    recentSection.style.display = 'none';
-    recentSection.style.visibility = 'hidden';
-    recentSection.style.position = 'absolute';
-    recentSection.style.top = '-9999px';
-  }
-
-  // First, find current game's category from the original game categories
-  let currentCategory = null;
-  const categorySections = document.querySelectorAll('.category');
-
-  categorySections.forEach(cat => {
-    const catName = cat.getAttribute('data-category');
-    if (catName === 'Recently Played' ||
-        cat.id === 'recentlyPlayedSection' ||
-        cat.id === 'searchResultsSection' ||
-        cat.id === 'curatedGamesSection') {
-      return;
-    }
-
-    const gameCards = cat.querySelectorAll('.game-card[data-folder]');
-    gameCards.forEach(card => {
-      if (card.getAttribute('data-folder') === currentGameFolder) {
-        currentCategory = catName;
-        console.log('Found current game in category:', catName);
-      }
-    });
-  });
-
-  // Collect ALL games from ALL real categories (including hidden ones)
-  const allGames = [];
-  const sameCategory = [];
-  const seenFolders = new Set();
-  seenFolders.add(currentGameFolder); // Don't include current game
-
-  categorySections.forEach(cat => {
-    const catName = cat.getAttribute('data-category');
-
-    // Skip special sections
-    if (catName === 'Recently Played' ||
-        cat.id === 'recentlyPlayedSection' ||
-        cat.id === 'searchResultsSection' ||
-        cat.id === 'curatedGamesSection') {
-      return;
-    }
-
-    const gameCards = cat.querySelectorAll('.game-card[data-folder]');
-
-    gameCards.forEach(card => {
-      const folder = card.getAttribute('data-folder');
-
-      // Skip if already seen
-      if (seenFolders.has(folder)) {
-        return;
-      }
-
-      seenFolders.add(folder);
-
-      // Clone and ensure the card is visible
-      const clonedCard = card.cloneNode(true);
-      clonedCard.style.display = ''; // Force show
-      clonedCard.style.visibility = 'visible';
-
-      const gameData = {
-        card: clonedCard,
-        folder: folder,
-        category: catName
-      };
-
-      allGames.push(gameData);
-
-      if (catName === currentCategory) {
-        sameCategory.push(gameData);
-      }
-    });
-  });
-
-  console.log('Total unique games collected:', allGames.length);
-  console.log('Same category games:', sameCategory.length);
-
-  if (allGames.length === 0) {
-    console.error('ERROR: No games found!');
-    return;
-  }
-
-  // Shuffle arrays
-  const shuffleArray = (array) => {
-    const arr = [...array];
-    for (let i = arr.length - 1; i > 0; i--) {
-      const j = Math.floor(Math.random() * (i + 1));
-      [arr[i], arr[j]] = [arr[j], arr[i]];
-    }
-    return arr;
-  };
-
-  const shuffledSameCategory = shuffleArray(sameCategory);
-  const shuffledAllGames = shuffleArray(allGames);
-
-  // ✅ ALWAYS fill exactly 7 rows - calculate columns dynamically
-  const grid = document.getElementById('curatedGamesGrid') || document.createElement('div');
-  const cols = getColumnCount(grid) || 5; // Get actual column count or default to 5
-  const rows = 7; // Always 7 rows
-  const targetCount = cols * rows; // Dynamic total based on screen size
-
-  console.log('Grid columns:', cols, 'Target games:', targetCount);
-
-  const curatedGames = [];
-
-  if (sameCategory.length === 0) {
-    // No same category - use all random
-    curatedGames.push(...shuffledAllGames.slice(0, Math.min(targetCount, shuffledAllGames.length)));
-  } else {
-    // Mix: 60% same category, 40% other
-    const sameCatTarget = Math.min(Math.ceil(targetCount * 0.6), sameCategory.length);
-
-    // Add same category games
-    curatedGames.push(...shuffledSameCategory.slice(0, sameCatTarget));
-
-    // Add other games
-    const usedFolders = new Set(curatedGames.map(g => g.folder));
-    const otherGames = shuffledAllGames.filter(g => !usedFolders.has(g.folder));
-    const remainingSlots = targetCount - curatedGames.length;
-
-    curatedGames.push(...otherGames.slice(0, remainingSlots));
-  }
-
-  console.log('FINAL curated games count:', curatedGames.length);
-
-  // Final shuffle
-  const finalCurated = shuffleArray(curatedGames);
-
-  // Hide all other categories
-  categorySections.forEach(cat => {
-    if (cat.id !== 'curatedGamesSection') {
-      cat.style.display = 'none';
-    }
-  });
-
-  // Create or update curated section
-  let curatedSection = document.getElementById('curatedGamesSection');
-  if (!curatedSection) {
-    curatedSection = document.createElement('div');
-    curatedSection.id = 'curatedGamesSection';
-    curatedSection.className = 'category';
-    curatedSection.innerHTML = '<h2>You Might Also Like</h2><div class="grid" id="curatedGamesGrid"></div>';
-    const viewer = document.querySelector('.viewer');
-    if (viewer.nextSibling) {
-      viewer.parentNode.insertBefore(curatedSection, viewer.nextSibling);
-    } else {
-      viewer.parentNode.appendChild(curatedSection);
-    }
-  }
-
-  curatedSection.style.display = 'block';
-  const curatedGrid = document.getElementById('curatedGamesGrid');
-  curatedGrid.innerHTML = '';
-
-  // Display curated games
-  finalCurated.forEach((game, idx) => {
-    curatedGrid.appendChild(game.card);
-  });
-
-  console.log('=== Finished showCuratedGames');
-}
-
-function startGame() {
-  if (!currentGameFolder) return;
-  frame.src = 'games/' + currentGameFolder + '/index.html';
-  startOverlay.style.opacity = '0';
-  startOverlay.style.pointerEvents = 'none';
-}
-
-function closeGame() {
-  frame.src = '';
-  viewer.style.display = 'none';
-  controls.classList.remove('active');
-  gameTitle.textContent = '';
-  currentGameFolder = null;
-  startOverlay.style.opacity = '1';
-  startOverlay.style.pointerEvents = 'auto';
-  window.location.hash = '';
-
-  // Deactivate game view and restore normal category view
-  gameViewActive = false;
-
-  // Hide curated and search results sections
-  const curatedSection = document.getElementById('curatedGamesSection');
-  if (curatedSection) curatedSection.style.display = 'none';
-
-  const searchResults = document.getElementById('searchResultsSection');
-  if (searchResults) searchResults.style.display = 'none';
-
-  // Hide All Games section
-  const allGamesSection = document.querySelector('[data-category="All Games"]');
-  if (allGamesSection) allGamesSection.style.display = 'none';
-
-  // Restore Recently Played visibility
-  const recentlyPlayedSection = document.getElementById('recentlyPlayedSection');
-  if (recentlyPlayedSection) {
-    const recentGrid = document.getElementById('recentlyPlayedGrid');
-    if (recentGrid && recentGrid.children.length > 0) {
-      recentlyPlayedSection.style.display = 'block';
-      recentlyPlayedSection.style.visibility = 'visible';
-      recentlyPlayedSection.style.position = 'relative';
-      recentlyPlayedSection.style.top = 'auto';
-    }
-  }
-
-  // Show all normal categories again (exclude All Games)
-  document.querySelectorAll('.category').forEach(cat => {
-    const category = cat.getAttribute('data-category');
-    if (category === 'Recently Played') {
-      const recentGrid = document.getElementById('recentlyPlayedGrid');
-      cat.style.display = (recentGrid && recentGrid.children.length > 0) ? 'block' : 'none';
-    } else if (cat.id !== 'curatedGamesSection' && cat.id !== 'searchResultsSection' && category !== 'All Games') {
-      cat.style.display = 'block';
-    }
-  });
-
-  // Restore "show more" functionality
-  updateAllCategories();
-}
-
-function toggleFullscreen() {
-  const viewerElement = document.querySelector('.viewer');
-
-  if (!document.fullscreenElement && !document.webkitFullscreenElement &&
-      !document.mozFullScreenElement && !document.msFullscreenElement) {
-    // Enter fullscreen
-    if (viewerElement.requestFullscreen) {
-      viewerElement.requestFullscreen();
-    } else if (viewerElement.webkitRequestFullscreen) {
-      viewerElement.webkitRequestFullscreen();
-    } else if (viewerElement.mozRequestFullScreen) {
-      viewerElement.mozRequestFullScreen();
-    } else if (viewerElement.msRequestFullscreen) {
-      viewerElement.msRequestFullscreen();
-    }
-  } else {
-    // Exit fullscreen
-    if (document.exitFullscreen) {
-      document.exitFullscreen();
-    } else if (document.webkitExitFullscreen) {
-      document.webkitExitFullscreen();
-    } else if (document.mozCancelFullScreen) {
-      document.mozCancelFullScreen();
-    } else if (document.msExitFullscreen) {
-      document.msExitFullscreen();
-    }
-  }
-}
-
-// Listen for fullscreen changes to adjust iframe
-document.addEventListener('fullscreenchange', handleFullscreenChange);
-document.addEventListener('webkitfullscreenchange', handleFullscreenChange);
-document.addEventListener('mozfullscreenchange', handleFullscreenChange);
-document.addEventListener('MSFullscreenChange', handleFullscreenChange);
-
-function handleFullscreenChange() {
-  const viewer = document.querySelector('.viewer');
-  const iframe = document.getElementById('gameFrame');
-
-  if (document.fullscreenElement || document.webkitFullscreenElement ||
-      document.mozFullScreenElement || document.msFullscreenElement) {
-    // Entering fullscreen
-    console.log('Entered fullscreen mode');
-  } else {
-    // Exiting fullscreen
-    console.log('Exited fullscreen mode');
-  }
-}
-
-// Recently played storage helpers
+// Recently played storage helpers - called from individual game pages
 function saveRecentlyPlayed(game) {
   let list = cleanRecentlyPlayed(); // Clean before saving
 
@@ -2852,11 +2506,6 @@ function filterCategory(cat, updateURL = true) {
   const all = document.querySelectorAll('.category');
   const searchBar = document.getElementById('searchBar');
 
-  // Close game window if it's open
-  if (gameViewActive) {
-    closeGame();
-  }
-
   // Update URL if requested
   if (updateURL) {
     if (cat === 'Home') {
@@ -2870,12 +2519,9 @@ function filterCategory(cat, updateURL = true) {
   if (searchBar) searchBar.value = '';
   hideSearchDropdown();
 
-  // Hide search and curated sections
+  // Hide search section
   const searchResults = document.getElementById('searchResultsSection');
   if (searchResults) searchResults.style.display = 'none';
-
-  const curatedSection = document.getElementById('curatedGamesSection');
-  if (curatedSection) curatedSection.style.display = 'none';
 
   if (cat === 'Home') {
     currentViewMode = 'home';
@@ -2883,7 +2529,7 @@ function filterCategory(cat, updateURL = true) {
       const category = c.getAttribute('data-category');
 
       // Skip special sections
-      if (c.id === 'searchResultsSection' || c.id === 'curatedGamesSection' || category === 'All Games') return;
+      if (c.id === 'searchResultsSection' || category === 'All Games') return;
 
       // Show recently played and all categories on home
       if (category === 'Recently Played') {
@@ -2911,7 +2557,7 @@ function filterCategory(cat, updateURL = true) {
       const category = c.getAttribute('data-category');
 
       // Skip special sections
-      if (c.id === 'searchResultsSection' || c.id === 'curatedGamesSection' || category === 'All Games') return;
+      if (c.id === 'searchResultsSection' || category === 'All Games') return;
 
       // Show only selected category (show all games at once)
       c.style.display = (category === cat) ? 'block' : 'none';
@@ -2926,31 +2572,10 @@ function filterCategory(cat, updateURL = true) {
 function handleRouting() {
   const hash = window.location.hash;
 
-  if (hash.startsWith('#/game/')) {
-    const folder = decodeURIComponent(hash.replace('#/game/', ''));
-
-    // Check if game exists before trying to open
-    if (!gameExists(folder)) {
-      console.log('Game not found:', folder);
-      alert('This game is no longer available.');
-      window.location.hash = '';
-      return;
-    }
-
-    const cards = Array.from(document.querySelectorAll('.game-card'));
-    const card = cards.find(c => c.getAttribute('data-folder') === folder);
-    if (card) {
-      const gameName = card.getAttribute('data-name');
-      const thumbImg = card.querySelector('.thumb');
-      const thumbSrc = thumbImg ? thumbImg.src : 'assets/logo.png';
-      prepareGame(encodeURIComponent(folder), encodeURIComponent(gameName), thumbSrc);
-    }
-  } else if (hash.startsWith('#/category/')) {
+  if (hash.startsWith('#/category/')) {
     const category = decodeURIComponent(hash.replace('#/category/', ''));
-    closeGame();
     filterCategory(category, false); // Don't update URL since we're already routing
   } else {
-    closeGame();
     filterCategory('Home', false); // Don't update URL since we're already routing
   }
 }
