--- a/Highway Racer.html
+++ b/Highway Racer.html
@@ -924,36 +924,11 @@ footer a:hover {
   <div class="recommendations">
     <h2>You Might Also Like</h2>
     <div class="grid">
-      <a href="Crazy Motorcycle.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crazy Motorcycle/thumbnail.jpg')">
-        <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle" loading="lazy">
-      </div>
-      <div class="card-title">Crazy Motorcycle</div>
-    </a><a href="Drift Boss.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Drift Boss/thumbnail.png')">
-        <img class="thumb" src="games/Drift Boss/thumbnail.png" alt="Drift Boss" loading="lazy">
-      </div>
-      <div class="card-title">Drift Boss</div>
-    </a><a href="Crazy Cars.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cars/thumbnail.jpg')">
-        <img class="thumb" src="games/Crazy Cars/thumbnail.jpg" alt="Crazy Cars" loading="lazy">
-      </div>
-      <div class="card-title">Crazy Cars</div>
-    </a><a href="Bouncy Motors.html" class="game-card">
+      <a href="Bouncy Motors.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bouncy Motors/thumbnail.jpg')">
         <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors" loading="lazy">
       </div>
       <div class="card-title">Bouncy Motors</div>
-    </a><a href="Drift Hunters.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Drift Hunters/thumbnail.jpg')">
-        <img class="thumb" src="games/Drift Hunters/thumbnail.jpg" alt="Drift Hunters" loading="lazy">
-      </div>
-      <div class="card-title">Drift Hunters</div>
-    </a><a href="Escape Road .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Escape Road /thumbnail.png')">
-        <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road " loading="lazy">
-      </div>
-      <div class="card-title">Escape Road </div>
     </a><a href="Crazy Cattle 3D.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
         <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D" loading="lazy">
@@ -964,46 +939,71 @@ footer a:hover {
         <img class="thumb" src="games/Blaze Drifter/thumbnail.jpg" alt="Blaze Drifter" loading="lazy">
       </div>
       <div class="card-title">Blaze Drifter</div>
+    </a><a href="Drift Boss.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drift Boss/thumbnail.png')">
+        <img class="thumb" src="games/Drift Boss/thumbnail.png" alt="Drift Boss" loading="lazy">
+      </div>
+      <div class="card-title">Drift Boss</div>
+    </a><a href="Drift Hunters.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drift Hunters/thumbnail.jpg')">
+        <img class="thumb" src="games/Drift Hunters/thumbnail.jpg" alt="Drift Hunters" loading="lazy">
+      </div>
+      <div class="card-title">Drift Hunters</div>
+    </a><a href="Crazy Cars.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cars/thumbnail.jpg')">
+        <img class="thumb" src="games/Crazy Cars/thumbnail.jpg" alt="Crazy Cars" loading="lazy">
+      </div>
+      <div class="card-title">Crazy Cars</div>
+    </a><a href="Crazy Motorcycle.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crazy Motorcycle/thumbnail.jpg')">
+        <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle" loading="lazy">
+      </div>
+      <div class="card-title">Crazy Motorcycle</div>
+    </a><a href="Escape Road .html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Escape Road /thumbnail.png')">
+        <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road " loading="lazy">
+      </div>
+      <div class="card-title">Escape Road </div>
+    </a><a href="10 Minutes Till Dawn.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/10 Minutes Till Dawn/thumbnail.png')">
+        <img class="thumb" src="games/10 Minutes Till Dawn/thumbnail.png" alt="10 Minutes Till Dawn" loading="lazy">
+      </div>
+      <div class="card-title">10 Minutes Till Dawn</div>
+    </a><a href="BTD5.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/BTD5/thumbnail.jpg')">
+        <img class="thumb" src="games/BTD5/thumbnail.jpg" alt="BTD5" loading="lazy">
+      </div>
+      <div class="card-title">BTD5</div>
+    </a><a href="Dead Zed 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dead Zed 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Dead Zed 2/thumbnail.jpg" alt="Dead Zed 2" loading="lazy">
+      </div>
+      <div class="card-title">Dead Zed 2</div>
+    </a><a href="Clear Vision 4.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 4/thumbnail.jpg')">
+        <img class="thumb" src="games/Clear Vision 4/thumbnail.jpg" alt="Clear Vision 4" loading="lazy">
+      </div>
+      <div class="card-title">Clear Vision 4</div>
     </a><a href="Clear Vision 2.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 2/thumbnail.jpg')">
         <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2" loading="lazy">
       </div>
       <div class="card-title">Clear Vision 2</div>
-    </a><a href="Henry Stickmin Escaping The Prison.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
-        <img class="thumb" src="games/Henry Stickmin Escaping The Prison/thumbnail.jpg" alt="Henry Stickmin Escaping The Prison" loading="lazy">
+    </a><a href="Dreader.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dreader/thumbnail.png')">
+        <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader" loading="lazy">
       </div>
-      <div class="card-title">Henry Stickmin Escaping The Prison</div>
-    </a><a href="Gun Spin.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Gun Spin/thumbnail.png')">
-        <img class="thumb" src="games/Gun Spin/thumbnail.png" alt="Gun Spin" loading="lazy">
+      <div class="card-title">Dreader</div>
+    </a><a href="Blackjack.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Blackjack/thumbnail.png')">
+        <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack" loading="lazy">
       </div>
-      <div class="card-title">Gun Spin</div>
-    </a><a href="Block Blast.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Block Blast/thumbnail.jpg')">
-        <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast" loading="lazy">
+      <div class="card-title">Blackjack</div>
+    </a><a href="Geometry Dash Lite.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Geometry Dash Lite/thumbnail.png')">
+        <img class="thumb" src="games/Geometry Dash Lite/thumbnail.png" alt="Geometry Dash Lite" loading="lazy">
       </div>
-      <div class="card-title">Block Blast</div>
-    </a><a href="Bit Planes.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bit Planes/thumbnail.jpg')">
-        <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes" loading="lazy">
-      </div>
-      <div class="card-title">Bit Planes</div>
-    </a><a href="Gold Digger FRVR.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Gold Digger FRVR/thumbnail.png')">
-        <img class="thumb" src="games/Gold Digger FRVR/thumbnail.png" alt="Gold Digger FRVR" loading="lazy">
-      </div>
-      <div class="card-title">Gold Digger FRVR</div>
-    </a><a href="Henry Stickmin Fleeing The Complex.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
-        <img class="thumb" src="games/Henry Stickmin Fleeing The Complex/thumbnail.png" alt="Henry Stickmin Fleeing The Complex" loading="lazy">
-      </div>
-      <div class="card-title">Henry Stickmin Fleeing The Complex</div>
-    </a><a href="The Binding of Isaac - Wrath of the Lamb.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
-        <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb" loading="lazy">
-      </div>
-      <div class="card-title">The Binding of Isaac - Wrath of the Lamb</div>
+      <div class="card-title">Geometry Dash Lite</div>
     </a><a href="Infinite Craft.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Infinite Craft/thumbnail.png')">
         <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft" loading="lazy">
@@ -1014,86 +1014,86 @@ footer a:hover {
         <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5" loading="lazy">
       </div>
       <div class="card-title">Bob The Robber 5</div>
-    </a><a href="Crossy Road.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crossy Road/thumbnail.jpg')">
-        <img class="thumb" src="games/Crossy Road/thumbnail.jpg" alt="Crossy Road" loading="lazy">
-      </div>
-      <div class="card-title">Crossy Road</div>
-    </a><a href="Effing Worms.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Effing Worms/thumbnail.jpg')">
-        <img class="thumb" src="games/Effing Worms/thumbnail.jpg" alt="Effing Worms" loading="lazy">
-      </div>
-      <div class="card-title">Effing Worms</div>
-    </a><a href="BTD5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/BTD5/thumbnail.jpg')">
-        <img class="thumb" src="games/BTD5/thumbnail.jpg" alt="BTD5" loading="lazy">
-      </div>
-      <div class="card-title">BTD5</div>
     </a><a href="Dunk Shot.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Dunk Shot/thumbnail.png')">
         <img class="thumb" src="games/Dunk Shot/thumbnail.png" alt="Dunk Shot" loading="lazy">
       </div>
       <div class="card-title">Dunk Shot</div>
-    </a><a href="Burger and Frights.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Burger and Frights/thumbnail.jpg')">
-        <img class="thumb" src="games/Burger and Frights/thumbnail.jpg" alt="Burger and Frights" loading="lazy">
+    </a><a href="Ink Game.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Ink Game/thumbnail.jpg')">
+        <img class="thumb" src="games/Ink Game/thumbnail.jpg" alt="Ink Game" loading="lazy">
       </div>
-      <div class="card-title">Burger and Frights</div>
-    </a><a href="Douchebag Life.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Douchebag Life/thumbnail.jpg')">
-        <img class="thumb" src="games/Douchebag Life/thumbnail.jpg" alt="Douchebag Life" loading="lazy">
+      <div class="card-title">Ink Game</div>
+    </a><a href="Crossy Road.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crossy Road/thumbnail.jpg')">
+        <img class="thumb" src="games/Crossy Road/thumbnail.jpg" alt="Crossy Road" loading="lazy">
       </div>
-      <div class="card-title">Douchebag Life</div>
-    </a><a href="FNAF 4.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4" loading="lazy">
+      <div class="card-title">Crossy Road</div>
+    </a><a href="Clear Vision 1.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 1/thumbnail.jpg')">
+        <img class="thumb" src="games/Clear Vision 1/thumbnail.jpg" alt="Clear Vision 1" loading="lazy">
       </div>
-      <div class="card-title">FNAF 4</div>
-    </a><a href="Bob The Robber 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
+      <div class="card-title">Clear Vision 1</div>
+    </a><a href="Bad Parenting.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bad Parenting/thumbnail.jpg')">
+        <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting" loading="lazy">
       </div>
-      <div class="card-title">Bob The Robber 2</div>
-    </a><a href="Elastic Face.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Elastic Face/thumbnail.png')">
-        <img class="thumb" src="games/Elastic Face/thumbnail.png" alt="Elastic Face" loading="lazy">
-      </div>
-      <div class="card-title">Elastic Face</div>
+      <div class="card-title">Bad Parenting</div>
     </a><a href="FNAF 3.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/FNAF 3/thumbnail.png')">
         <img class="thumb" src="games/FNAF 3/thumbnail.png" alt="FNAF 3" loading="lazy">
       </div>
       <div class="card-title">FNAF 3</div>
-    </a><a href="Hover Race Drive.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Hover Race Drive/thumbnail.jpg')">
-        <img class="thumb" src="games/Hover Race Drive/thumbnail.jpg" alt="Hover Race Drive" loading="lazy">
+    </a><a href="Elastic Face.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Elastic Face/thumbnail.png')">
+        <img class="thumb" src="games/Elastic Face/thumbnail.png" alt="Elastic Face" loading="lazy">
       </div>
-      <div class="card-title">Hover Race Drive</div>
-    </a><a href="Going Balls.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Going Balls/thumbnail.png')">
-        <img class="thumb" src="games/Going Balls/thumbnail.png" alt="Going Balls" loading="lazy">
+      <div class="card-title">Elastic Face</div>
+    </a><a href="Cut the Rope.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Cut the Rope/thumbnail.png')">
+        <img class="thumb" src="games/Cut the Rope/thumbnail.png" alt="Cut the Rope" loading="lazy">
       </div>
-      <div class="card-title">Going Balls</div>
-    </a><a href="Bad Piggies.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Piggies/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies" loading="lazy">
+      <div class="card-title">Cut the Rope</div>
+    </a><a href="Drive Mad.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drive Mad/thumbnail.png')">
+        <img class="thumb" src="games/Drive Mad/thumbnail.png" alt="Drive Mad" loading="lazy">
       </div>
-      <div class="card-title">Bad Piggies</div>
-    </a><a href="Dead Zed 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dead Zed 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Dead Zed 2/thumbnail.jpg" alt="Dead Zed 2" loading="lazy">
+      <div class="card-title">Drive Mad</div>
+    </a><a href="Gold Digger FRVR.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Gold Digger FRVR/thumbnail.png')">
+        <img class="thumb" src="games/Gold Digger FRVR/thumbnail.png" alt="Gold Digger FRVR" loading="lazy">
       </div>
-      <div class="card-title">Dead Zed 2</div>
-    </a><a href="1v1.lol.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/1v1.lol/thumbnail.png')">
-        <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol" loading="lazy">
+      <div class="card-title">Gold Digger FRVR</div>
+    </a><a href="Cluster Rush.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Cluster Rush/thumbnail.png')">
+        <img class="thumb" src="games/Cluster Rush/thumbnail.png" alt="Cluster Rush" loading="lazy">
       </div>
-      <div class="card-title">1v1.lol</div>
-    </a><a href="Blackjack.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Blackjack/thumbnail.png')">
-        <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack" loading="lazy">
+      <div class="card-title">Cluster Rush</div>
+    </a><a href="Vapmpire Survivors.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Vapmpire Survivors/thumbnail.png')">
+        <img class="thumb" src="games/Vapmpire Survivors/thumbnail.png" alt="Vapmpire Survivors" loading="lazy">
       </div>
-      <div class="card-title">Blackjack</div>
+      <div class="card-title">Vapmpire Survivors</div>
+    </a><a href="The Binding of Isaac - Wrath of the Lamb.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+        <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb" loading="lazy">
+      </div>
+      <div class="card-title">The Binding of Isaac - Wrath of the Lamb</div>
+    </a><a href="Hanger 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hanger 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Hanger 2/thumbnail.jpg" alt="Hanger 2" loading="lazy">
+      </div>
+      <div class="card-title">Hanger 2</div>
+    </a><a href="Henry Stickmin Escaping The Prison.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
+        <img class="thumb" src="games/Henry Stickmin Escaping The Prison/thumbnail.jpg" alt="Henry Stickmin Escaping The Prison" loading="lazy">
+      </div>
+      <div class="card-title">Henry Stickmin Escaping The Prison</div>
+    </a><a href="Henry Stickmin Stealing The Diamond.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Stealing The Diamond/thumbnail.jpg')">
+        <img class="thumb" src="games/Henry Stickmin Stealing The Diamond/thumbnail.jpg" alt="Henry Stickmin Stealing The Diamond" loading="lazy">
+      </div>
+      <div class="card-title">Henry Stickmin Stealing The Diamond</div>
     </a><a href="FNAF 2.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/FNAF 2/thumbnail.png')">
         <img class="thumb" src="games/FNAF 2/thumbnail.png" alt="FNAF 2" loading="lazy">
