deploy: ca606b6ea23ada931b125ae2a48b86ba46370a31

--- a/index.html
+++ b/index.html
@@ -1106,8 +1106,8 @@ button:active {
     </div>
     <div class="card-title">1on1 Soccer</div>
   </div><div class="card game-card" data-index="2" data-folder="1on1 Tennis" data-name="1on1 tennis" onclick="window.location.href='1on1 Tennis.html'">
-    <div class="thumb-container" style="--thumb-url: url('games/1on1 Tennis/thumbnail.jpg')">
-      <img class="thumb" src="games/1on1 Tennis/thumbnail.jpg" alt="1on1 Tennis">
+    <div class="thumb-container" style="--thumb-url: url('games/1on1 Tennis/thumbnail.png')">
+      <img class="thumb" src="games/1on1 Tennis/thumbnail.png" alt="1on1 Tennis">
     </div>
     <div class="card-title">1on1 Tennis</div>
   </div><div class="card game-card" data-index="3" data-folder="1v1.lol" data-name="1v1.lol" onclick="window.location.href='1v1.lol.html'">
@@ -1580,8 +1580,8 @@ button:active {
           <h2>Uncategorized</h2>
           <div class="grid">
             <div class="card game-card" data-index="0" data-folder="1on1 Tennis" data-name="1on1 tennis" onclick="window.location.href='1on1 Tennis.html'">
-    <div class="thumb-container" style="--thumb-url: url('games/1on1 Tennis/thumbnail.jpg')">
-      <img class="thumb" src="games/1on1 Tennis/thumbnail.jpg" alt="1on1 Tennis">
+    <div class="thumb-container" style="--thumb-url: url('games/1on1 Tennis/thumbnail.png')">
+      <img class="thumb" src="games/1on1 Tennis/thumbnail.png" alt="1on1 Tennis">
     </div>
     <div class="card-title">1on1 Tennis</div>
   </div><div class="card game-card" data-index="1" data-folder="Bad Time Simulator" data-name="bad time simulator" onclick="window.location.href='Bad Time Simulator.html'">
