--- a/10 Minutes Till Dawn.html
+++ b/10 Minutes Till Dawn.html
@@ -934,171 +934,171 @@ footer a:hover {
         <img class="thumb" src="games/Cluster Rush/thumbnail.png" alt="Cluster Rush" loading="lazy">
       </div>
       <div class="card-title">Cluster Rush</div>
-    </a><a href="Happy Wheels.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
-        <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels" loading="lazy">
+    </a><a href="Burrito Bison Launcha Libre.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Burrito Bison Launcha Libre/thumbnail.jpg')">
+        <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre" loading="lazy">
       </div>
-      <div class="card-title">Happy Wheels</div>
-    </a><a href="Dunk Shot.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dunk Shot/thumbnail.png')">
-        <img class="thumb" src="games/Dunk Shot/thumbnail.png" alt="Dunk Shot" loading="lazy">
+      <div class="card-title">Burrito Bison Launcha Libre</div>
+    </a><a href="Blackjack.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Blackjack/thumbnail.png')">
+        <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack" loading="lazy">
       </div>
-      <div class="card-title">Dunk Shot</div>
-    </a><a href="FNAF 3.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 3/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 3/thumbnail.png" alt="FNAF 3" loading="lazy">
+      <div class="card-title">Blackjack</div>
+    </a><a href="1v1.lol.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/1v1.lol/thumbnail.png')">
+        <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol" loading="lazy">
       </div>
-      <div class="card-title">FNAF 3</div>
-    </a><a href="Get Yoked.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Get Yoked/thumbnail.jpg')">
-        <img class="thumb" src="games/Get Yoked/thumbnail.jpg" alt="Get Yoked" loading="lazy">
+      <div class="card-title">1v1.lol</div>
+    </a><a href="Clear Vision 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2" loading="lazy">
       </div>
-      <div class="card-title">Get Yoked</div>
-    </a><a href="Bitlife.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bitlife/thumbnail.jpg')">
-        <img class="thumb" src="games/Bitlife/thumbnail.jpg" alt="Bitlife" loading="lazy">
-      </div>
-      <div class="card-title">Bitlife</div>
-    </a><a href="Cookie Clicker.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Cookie Clicker/thumbnail.png')">
-        <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker" loading="lazy">
-      </div>
-      <div class="card-title">Cookie Clicker</div>
-    </a><a href="Happy Room.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Happy Room/thumbnail.png')">
-        <img class="thumb" src="games/Happy Room/thumbnail.png" alt="Happy Room" loading="lazy">
-      </div>
-      <div class="card-title">Happy Room</div>
-    </a><a href="Geometry Dash Lite.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Geometry Dash Lite/thumbnail.png')">
-        <img class="thumb" src="games/Geometry Dash Lite/thumbnail.png" alt="Geometry Dash Lite" loading="lazy">
-      </div>
-      <div class="card-title">Geometry Dash Lite</div>
-    </a><a href="Crazy Cars.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cars/thumbnail.jpg')">
-        <img class="thumb" src="games/Crazy Cars/thumbnail.jpg" alt="Crazy Cars" loading="lazy">
-      </div>
-      <div class="card-title">Crazy Cars</div>
-    </a><a href="Dud.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dud/thumbnail.png')">
-        <img class="thumb" src="games/Dud/thumbnail.png" alt="Dud" loading="lazy">
-      </div>
-      <div class="card-title">Dud</div>
-    </a><a href="Crank It!.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crank It!/thumbnail.jpg')">
-        <img class="thumb" src="games/Crank It!/thumbnail.jpg" alt="Crank It!" loading="lazy">
-      </div>
-      <div class="card-title">Crank It!</div>
-    </a><a href="Fruit Ninja.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Fruit Ninja/thumbnail.jpg')">
-        <img class="thumb" src="games/Fruit Ninja/thumbnail.jpg" alt="Fruit Ninja" loading="lazy">
-      </div>
-      <div class="card-title">Fruit Ninja</div>
-    </a><a href="Slope.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
-        <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope" loading="lazy">
-      </div>
-      <div class="card-title">Slope</div>
-    </a><a href="Baldi’s Basics.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Baldi’s Basics/thumbnail.png')">
-        <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics" loading="lazy">
-      </div>
-      <div class="card-title">Baldi’s Basics</div>
-    </a><a href="The Binding of Isaac - Wrath of the Lamb.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
-        <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb" loading="lazy">
-      </div>
-      <div class="card-title">The Binding of Isaac - Wrath of the Lamb</div>
+      <div class="card-title">Clear Vision 2</div>
     </a><a href="Age Of War.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Age Of War/thumbnail.png')">
         <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War" loading="lazy">
       </div>
       <div class="card-title">Age Of War</div>
-    </a><a href="Henry Stickmin Stealing The Diamond.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Stealing The Diamond/thumbnail.jpg')">
-        <img class="thumb" src="games/Henry Stickmin Stealing The Diamond/thumbnail.jpg" alt="Henry Stickmin Stealing The Diamond" loading="lazy">
+    </a><a href="Bloodmoney 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Bloodmoney 2/thumbnail.jpg" alt="Bloodmoney 2" loading="lazy">
       </div>
-      <div class="card-title">Henry Stickmin Stealing The Diamond</div>
+      <div class="card-title">Bloodmoney 2</div>
+    </a><a href="Happy Wheels.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
+        <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels" loading="lazy">
+      </div>
+      <div class="card-title">Happy Wheels</div>
+    </a><a href="Drive Mad.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drive Mad/thumbnail.png')">
+        <img class="thumb" src="games/Drive Mad/thumbnail.png" alt="Drive Mad" loading="lazy">
+      </div>
+      <div class="card-title">Drive Mad</div>
+    </a><a href="FNAF 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 2/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 2/thumbnail.png" alt="FNAF 2" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 2</div>
+    </a><a href="Geometry Dash Lite.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Geometry Dash Lite/thumbnail.png')">
+        <img class="thumb" src="games/Geometry Dash Lite/thumbnail.png" alt="Geometry Dash Lite" loading="lazy">
+      </div>
+      <div class="card-title">Geometry Dash Lite</div>
+    </a><a href="1on1 Tennis.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/1on1 Tennis/thumbnail.png')">
+        <img class="thumb" src="games/1on1 Tennis/thumbnail.png" alt="1on1 Tennis" loading="lazy">
+      </div>
+      <div class="card-title">1on1 Tennis</div>
+    </a><a href="FNAF 1.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 1/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 1/thumbnail.png" alt="FNAF 1" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 1</div>
     </a><a href="Bouncy Motors.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bouncy Motors/thumbnail.jpg')">
         <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors" loading="lazy">
       </div>
       <div class="card-title">Bouncy Motors</div>
+    </a><a href="Deepest Sword.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Deepest Sword/thumbnail.jpg')">
+        <img class="thumb" src="games/Deepest Sword/thumbnail.jpg" alt="Deepest Sword" loading="lazy">
+      </div>
+      <div class="card-title">Deepest Sword</div>
+    </a><a href="Bob The Robber 5.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 5/thumbnail.jpg')">
+        <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5" loading="lazy">
+      </div>
+      <div class="card-title">Bob The Robber 5</div>
     </a><a href="Bad Piggies.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bad Piggies/thumbnail.jpg')">
         <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies" loading="lazy">
       </div>
       <div class="card-title">Bad Piggies</div>
-    </a><a href="1on1 Tennis.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/1on1 Tennis/thumbnail.jpg')">
-        <img class="thumb" src="games/1on1 Tennis/thumbnail.jpg" alt="1on1 Tennis" loading="lazy">
+    </a><a href="Clear Vision 1.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 1/thumbnail.jpg')">
+        <img class="thumb" src="games/Clear Vision 1/thumbnail.jpg" alt="Clear Vision 1" loading="lazy">
       </div>
-      <div class="card-title">1on1 Tennis</div>
-    </a><a href="Bob The Robber 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
+      <div class="card-title">Clear Vision 1</div>
+    </a><a href="Dunk Shot.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dunk Shot/thumbnail.png')">
+        <img class="thumb" src="games/Dunk Shot/thumbnail.png" alt="Dunk Shot" loading="lazy">
       </div>
-      <div class="card-title">Bob The Robber 2</div>
+      <div class="card-title">Dunk Shot</div>
+    </a><a href="Gold Digger FRVR.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Gold Digger FRVR/thumbnail.png')">
+        <img class="thumb" src="games/Gold Digger FRVR/thumbnail.png" alt="Gold Digger FRVR" loading="lazy">
+      </div>
+      <div class="card-title">Gold Digger FRVR</div>
     </a><a href="Bad Parenting.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bad Parenting/thumbnail.jpg')">
         <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting" loading="lazy">
       </div>
       <div class="card-title">Bad Parenting</div>
-    </a><a href="Hover Race Drive.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Hover Race Drive/thumbnail.jpg')">
-        <img class="thumb" src="games/Hover Race Drive/thumbnail.jpg" alt="Hover Race Drive" loading="lazy">
-      </div>
-      <div class="card-title">Hover Race Drive</div>
-    </a><a href="Bad Time Simulator.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Time Simulator/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Time Simulator/thumbnail.jpg" alt="Bad Time Simulator" loading="lazy">
-      </div>
-      <div class="card-title">Bad Time Simulator</div>
-    </a><a href="Gun Spin.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Gun Spin/thumbnail.png')">
-        <img class="thumb" src="games/Gun Spin/thumbnail.png" alt="Gun Spin" loading="lazy">
-      </div>
-      <div class="card-title">Gun Spin</div>
-    </a><a href="Crossy Road.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crossy Road/thumbnail.jpg')">
-        <img class="thumb" src="games/Crossy Road/thumbnail.jpg" alt="Crossy Road" loading="lazy">
-      </div>
-      <div class="card-title">Crossy Road</div>
-    </a><a href="Basketball FRVR.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Basketball FRVR/thumbnail.jpg')">
-        <img class="thumb" src="games/Basketball FRVR/thumbnail.jpg" alt="Basketball FRVR" loading="lazy">
-      </div>
-      <div class="card-title">Basketball FRVR</div>
-    </a><a href="Clear Vision 3.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 3/thumbnail.png')">
-        <img class="thumb" src="games/Clear Vision 3/thumbnail.png" alt="Clear Vision 3" loading="lazy">
-      </div>
-      <div class="card-title">Clear Vision 3</div>
-    </a><a href="Grindcraft.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Grindcraft/thumbnail.jpg')">
-        <img class="thumb" src="games/Grindcraft/thumbnail.jpg" alt="Grindcraft" loading="lazy">
-      </div>
-      <div class="card-title">Grindcraft</div>
     </a><a href="1on1 Soccer.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/1on1 Soccer/thumbnail.png')">
         <img class="thumb" src="games/1on1 Soccer/thumbnail.png" alt="1on1 Soccer" loading="lazy">
       </div>
       <div class="card-title">1on1 Soccer</div>
-    </a><a href="Granny.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Granny/thumbnail.png')">
-        <img class="thumb" src="games/Granny/thumbnail.png" alt="Granny" loading="lazy">
+    </a><a href="Hungry Lamu.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hungry Lamu/thumbnail.jpg')">
+        <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu" loading="lazy">
       </div>
-      <div class="card-title">Granny</div>
-    </a><a href="Bloodmoney .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
-        <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney " loading="lazy">
+      <div class="card-title">Hungry Lamu</div>
+    </a><a href="Hanger 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hanger 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Hanger 2/thumbnail.jpg" alt="Hanger 2" loading="lazy">
       </div>
-      <div class="card-title">Bloodmoney </div>
-    </a><a href="Crazy Cattle 3D.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
-        <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D" loading="lazy">
+      <div class="card-title">Hanger 2</div>
+    </a><a href="Escape Road .html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Escape Road /thumbnail.png')">
+        <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road " loading="lazy">
       </div>
-      <div class="card-title">Crazy Cattle 3D</div>
+      <div class="card-title">Escape Road </div>
+    </a><a href="Fruit Ninja.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Fruit Ninja/thumbnail.jpg')">
+        <img class="thumb" src="games/Fruit Ninja/thumbnail.jpg" alt="Fruit Ninja" loading="lazy">
+      </div>
+      <div class="card-title">Fruit Ninja</div>
+    </a><a href="Earth Taken.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Earth Taken/thumbnail.jpg')">
+        <img class="thumb" src="games/Earth Taken/thumbnail.jpg" alt="Earth Taken" loading="lazy">
+      </div>
+      <div class="card-title">Earth Taken</div>
+    </a><a href="Helix Jump.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Helix Jump/thumbnail.jpg')">
+        <img class="thumb" src="games/Helix Jump/thumbnail.jpg" alt="Helix Jump" loading="lazy">
+      </div>
+      <div class="card-title">Helix Jump</div>
+    </a><a href="Gun Spin.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Gun Spin/thumbnail.png')">
+        <img class="thumb" src="games/Gun Spin/thumbnail.png" alt="Gun Spin" loading="lazy">
+      </div>
+      <div class="card-title">Gun Spin</div>
+    </a><a href="Henry Stickmin Fleeing The Complex.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
+        <img class="thumb" src="games/Henry Stickmin Fleeing The Complex/thumbnail.png" alt="Henry Stickmin Fleeing The Complex" loading="lazy">
+      </div>
+      <div class="card-title">Henry Stickmin Fleeing The Complex</div>
+    </a><a href="Cookie Clicker.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Cookie Clicker/thumbnail.png')">
+        <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker" loading="lazy">
+      </div>
+      <div class="card-title">Cookie Clicker</div>
+    </a><a href="Dreader.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dreader/thumbnail.png')">
+        <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader" loading="lazy">
+      </div>
+      <div class="card-title">Dreader</div>
+    </a><a href="Capybara Clicker.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Capybara Clicker/thumbnail.png')">
+        <img class="thumb" src="games/Capybara Clicker/thumbnail.png" alt="Capybara Clicker" loading="lazy">
+      </div>
+      <div class="card-title">Capybara Clicker</div>
+    </a><a href="Burger and Frights.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Burger and Frights/thumbnail.jpg')">
+        <img class="thumb" src="games/Burger and Frights/thumbnail.jpg" alt="Burger and Frights" loading="lazy">
+      </div>
+      <div class="card-title">Burger and Frights</div>
     </a>
     </div>
   </div>
