deploy: 470c7b10f1a39b11bebef6ea8039b5c6a2dec9ca

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   "@type": "ItemList",
   "name": "Chromebook Unlocked Games - Free Unblocked Games",
   "description": "Collection of free unblocked unrestricted online games to play at school on Chromebook - play online free",
-  "numberOfItems": 96,
+  "numberOfItems": 97,
   "itemListElement": [
     {
       "@type": "ListItem",
@@ -1961,7 +1961,12 @@ button:active {
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
     <div class="card-title">The Binding of Isaac - Wrath of the Lamb</div>
-  </div><div class="card game-card" data-index="95" data-folder="Vapmpire Survivors" data-name="vapmpire survivors" onclick="window.location.href='Vapmpire Survivors.html'">
+  </div><div class="card game-card" data-index="95" data-folder="The Visitor" data-name="the visitor" onclick="window.location.href='The Visitor.html'">
+    <div class="thumb-container" style="--thumb-url: url('games/The Visitor/thumbnail.png')">
+      <img class="thumb" src="games/The Visitor/thumbnail.png" alt="The Visitor">
+    </div>
+    <div class="card-title">The Visitor</div>
+  </div><div class="card game-card" data-index="96" data-folder="Vapmpire Survivors" data-name="vapmpire survivors" onclick="window.location.href='Vapmpire Survivors.html'">
     <div class="thumb-container" style="--thumb-url: url('games/Vapmpire Survivors/thumbnail.png')">
       <img class="thumb" src="games/Vapmpire Survivors/thumbnail.png" alt="Vapmpire Survivors">
     </div>
@@ -3067,6 +3072,21 @@ button:active {
     <div class="card-title">Happy Wheels</div>
   </div>
           </div>
+        </div><div class="category" data-category="Uncategorized">
+          <h2>Uncategorized</h2>
+          <div class="grid">
+            <div class="card game-card" data-index="0" data-folder="Minecraft" data-name="minecraft" onclick="window.location.href='Minecraft.html'">
+    <div class="thumb-container" style="--thumb-url: url('games/Minecraft/thumbnail.jpg')">
+      <img class="thumb" src="games/Minecraft/thumbnail.jpg" alt="Minecraft">
+    </div>
+    <div class="card-title">Minecraft</div>
+  </div><div class="card game-card" data-index="1" data-folder="The Visitor" data-name="the visitor" onclick="window.location.href='The Visitor.html'">
+    <div class="thumb-container" style="--thumb-url: url('games/The Visitor/thumbnail.png')">
+      <img class="thumb" src="games/The Visitor/thumbnail.png" alt="The Visitor">
+    </div>
+    <div class="card-title">The Visitor</div>
+  </div>
+          </div>
         </div><div class="category" data-category="Building">
           <h2>Building</h2>
           <div class="grid">
@@ -3225,16 +3245,6 @@ button:active {
       <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft">
     </div>
     <div class="card-title">Infinite Craft</div>
-  </div>
-          </div>
-        </div><div class="category" data-category="Uncategorized">
-          <h2>Uncategorized</h2>
-          <div class="grid">
-            <div class="card game-card" data-index="0" data-folder="Minecraft" data-name="minecraft" onclick="window.location.href='Minecraft.html'">
-    <div class="thumb-container" style="--thumb-url: url('games/Minecraft/thumbnail.jpg')">
-      <img class="thumb" src="games/Minecraft/thumbnail.jpg" alt="Minecraft">
-    </div>
-    <div class="card-title">Minecraft</div>
   </div>
           </div>
         </div><div class="category" data-category="Endless">
